--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
       </div>
     </div>
   </section>
+<!-- Resume Section -->
+<section id="resume" class="bg-unified py-20 px-4 fade-in">
+  <div class="section-content text-center max-w-3xl mx-auto">
+    <h2 class="text-4xl font-bold text-indigo-300 mb-6">Resume</h2>
+    <p class="mb-6 text-gray-300">
+      Explore my qualifications, projects, internships, skills, and certifications in more detail.
+    </p>
+    <a href="Archanamol_Lalu_Resume.pdf" target="_blank"
+       class="bg-blue-500 text-white px-6 py-3 rounded-full shadow hover:bg-blue-600 transition">
+      📄 Download My Resume
+    </a>
+  </div>
+</section>
+
+
   <!-- Contact Section -->
 <section id="contact" class="bg-unified px-4 py-20 fade-in">
   <div class="section-content max-w-5xl mx-auto grid md:grid-cols-2 gap-10 bg-white bg-opacity-20 backdrop-blur-md rounded-2xl shadow-xl p-8">
